--- a/new-app/my-app/src/App.css
+++ b/new-app/my-app/src/App.css
@@ -109,3 +109,8 @@ input {
   background-color: rgb(220, 89, 89);
   color: white;
 }
+
+.center-content {
+  display: grid;
+  place-items: center; /* Centers both horizontally and vertically */
+}
