--- a/new-app/my-app/src/App.css
+++ b/new-app/my-app/src/App.css
@@ -112,5 +112,5 @@ input {
 
 .center-content {
   display: grid;
-  place-items: center; /* Centers both horizontally and vertically */
+  place-items: center; 
 }
